# Night-City-Archive-API

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  example.env  readme.md  schema.sql
entity/: Cargo.toml
entity/src/: armor.rs  cyberware.rs  cyberware_type.rs  gear.rs  lib.rs  melee_weapon.rs  mod.rs  prelude.rs  ranged_weapon.rs  sea_orm_active_enums.rs  skill.rs  source.rs  stat.rs
migration/: Cargo.toml
migration/src/: enums.rs  lib.rs  m20250828_191135_create_source_table.rs  m20250828_191135_initial_migration.rs  m20250829_075247_create_gear_table.rs  m20250902_142019_create_stat_table.rs  m20250902_142020_create_skill_table.rs  m20250902_142037_create_melee_weapon_table.rs  m20250902_142037_create_ranged_weapon_table.rs  m20250902_142051_create_armor_table.rs  m20250902_142104_create_role_table.rs  m20250902_142122_create_cyberware_type_table.rs  m20250902_142123_create_cyberware_table.rs  m20250902_142313_create_program_table.rs
seeder/: Cargo.toml
seeder/src/: gear.rs  lib.rs  source.rs
src/: main.rs
src/api/: gear.rs
src/database/: database_utils.rs  mod.rs
src/entity/: cyberware.rs  gear.rs  items.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  weapons.rs
src/routes/: api.rs  gear.rs  mod.rs
tool_scripts/: clear_container_database.sh
