[package]
name = "NCArchiveAPI"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
dotenvy = "0.15.7"
sea-orm = { version = "1.1.14", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
seaography = { version = "1.1.4", features = ["field-camel-case", "with-json"] }
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.4"
serde = "1.0.219"
entity = { path = "entity" }
migration = { path = "migration" }
